--- a/src/app/components/admin/components/footer/footer.component.html
+++ b/src/app/components/admin/components/footer/footer.component.html
@@ -1,3 +1,5 @@
-<p>
-  footer works!
-</p>
+<footer class="bg-dark text-center text-white fixed-bottom">
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <a class="text-white" href="https://github.com/olhacodes" target="_blank">olha.codes GitHub</a>
+  </div>
+</footer>
