--- a/src/app/components/admin/components/contacts/contacts.component.html
+++ b/src/app/components/admin/components/contacts/contacts.component.html
@@ -1,3 +1,12 @@
-<p>
-  contacts works!
-</p>
+<div class="col-4 mx-2 mt-2">
+  <div class="card bg-dark text-white mt-2" style="border-radius: 1rem">
+    <div class="card-body p-2 text-center">
+      <div>
+        <h5></h5>
+        <button class="btn btn-success">
+          Details
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
