added logout guard

--- a/src/app/components/admin/components/header/header.component.html
+++ b/src/app/components/admin/components/header/header.component.html
@@ -10,7 +10,7 @@
           <a routerLinkActive="active" class="text-info text-decoration-none ms-3 p-1" routerLink="./contacts">Personal
             Contacts</a>
         </li>
-        <button type="button" class="btn btn-info ms-3">
+        <button type="button" class="btn btn-info ms-3" (click)="logout()">
           Logout
         </button>
       </ul>
