--- a/src/app/components/admin/components/contacts/contacts.component.html
+++ b/src/app/components/admin/components/contacts/contacts.component.html
@@ -1,8 +1,10 @@
 <div class="col-4 mx-2 mt-2">
-  <div class="card bg-dark text-white mt-2" style="border-radius: 1rem">
+  <div class="card bg-dark text-white mt-2" style="border-radius: 1rem"
+  *ngFor="let user of personalList | async">
     <div class="card-body p-2 text-center">
       <div>
-        <h5></h5>
+        <h5>{{user.name}}</h5>
+        <p>{{user.email}}</p>
         <button class="btn btn-success">
           Details
         </button>
