--- a/src/app/components/admin/components/contacts-details/contacts-details.component.html
+++ b/src/app/components/admin/components/contacts-details/contacts-details.component.html
@@ -1,3 +1,13 @@
-<p>
-  contacts-details works!
-</p>
+<div class="col-4 mx-2 mt-2">
+  <div class="card bg-dark text-white mt-2" style="border-radius: 1rem">
+    <div class="card-body p-2 text-center">
+      <div>
+        <h5>User Details:</h5>
+        <section>
+         
+        </section>
+      </div>
+      <button class="btn btn-success" [routerLink]="['../']">Go Back</button>
+    </div>
+  </div>
+</div>
