--- a/src/app/components/admin/components/contacts/contacts.component.html
+++ b/src/app/components/admin/components/contacts/contacts.component.html
@@ -4,8 +4,7 @@
     <div class="card-body p-2 text-center">
       <div>
         <h5>{{user.name}}</h5>
-        <p>{{user.email}}</p>
-        <button class="btn btn-success">
+        <button class="btn btn-success" [routerLink]="['user', user.id]">
           Details
         </button>
       </div>
