--- a/src/app/components/admin/components/contacts-details/contacts-details.component.html
+++ b/src/app/components/admin/components/contacts-details/contacts-details.component.html
@@ -3,8 +3,9 @@
     <div class="card-body p-2 text-center">
       <div>
         <h5>User Details:</h5>
-        <section>
-         
+        <section *ngIf="user | async as user">
+         <h3>{{user.name}}</h3>
+         <p>{{user.email}}</p>
         </section>
       </div>
       <button class="btn btn-success" [routerLink]="['../']">Go Back</button>
