--- a/src/app/components/admin/components/header/header.component.html
+++ b/src/app/components/admin/components/header/header.component.html
@@ -17,7 +17,7 @@
     </nav>
   </div>
 </header>
-<div class="progress">
+<div class="progress" *ngIf="isLoading | async">
   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100"
     aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
 </div>
